OSの設定手順を追記

--- a/src/ch_1_1.md
+++ b/src/ch_1_1.md
@@ -1,1 +1,36 @@
-## OSのインストール
+## OSの設定
+
+### Raspbianのインストール
+
+- Set Country: "Japan"を選択
+- Select WiFi Network: "Skip"
+- Check for Updates: "Skip"
+
+### ネットワークの設定
+
+`/etc/dhcpcd.conf`を編集し，下記の行を追加します．
+
+```text
+interface eth0
+static ip_address=XXX.XXX.XXX.XXX/XX
+static routers=163.221.190.1
+static domain_name_servers=163.221.8.11 163.221.8.12
+```
+
+`XXX.XXX.XXX.XXX/XX`の部分はRasPiごとに下記のように変えてください．
+
+- `163.221.190.121/24`
+- `163.221.190.121/24`
+- `163.221.190.121/24`
+- `163.221.190.121/24`
+
+ホスト名を設定します．`XXX`の部分はRasPiごとに下記のように変えてください．
+
+```
+$ sudo hostnamectl set-hostname XXX
+```
+
+- `sd-niku01.naist.jp`
+- `sd-niku02.naist.jp`
+- `sd-niku03.naist.jp`
+- `sd-niku04.naist.jp`
