--- a/src/ch_1_2.md
+++ b/src/ch_1_2.md
@@ -1,6 +1,11 @@
 ## SSHの設定
 
 ```text
+$ sudo systemctl enable ssh
+$ sudo systemctl start ssh
+```
+
+```text
 $ ssh-kegen
 $ scp /home/pi/.ssh/id_rsa 163.221.190.225:~/.ssh/id_rsa
 ```
