クラスタの構築に関する記述を追加

--- a/src/ch_1_1.md
+++ b/src/ch_1_1.md
@@ -1,12 +1,64 @@
-## OSの設定
+## OSのインストール
+
+Raspberry Pi向けに最適化された，RaspbianというOSをSDカードに書き込ます．
+
+### SDカードの準備
+
+1. Raspberry Piの[公式サイト](https://www.raspberrypi.org/downloads/raspbian/)
+からRaspbian Buster with desktop (Image with desktop based on Debian Buster)
+をダウンロードします．ダウンロードしたzipファイルを展開しておきます．
+
+2. OSをSDカードに書き込むためのソフトウェアEtcherをインストールします．
+Etcherの[公式サイト](https://www.balena.io/etcher/)からインストーラ
+をダウンロードし，インストールしてください．
+
+3. SDカードをPCに接続し，Etcherを起動してください．
+    "Select image"でRaspbianのディスクイメージを選択し，
+    "Select target"でSDカードを選択し，"Flash!"を押して書き込みを実行します．
+
+![balenaEtcher](img/balena_etcher.png)
 
 ### Raspbianのインストール
 
-- Set Country: "Japan"を選択
-- Select WiFi Network: "Skip"
-- Check for Updates: "Skip"
+Raspberry PiにSDカードを挿入し，ディスプレイ・キーボード・マウスを接続したら，
+電源を接続してください．Raspberry Piの起動画面が表示された後，Raspbianの
+インストーラが表示されます．
+
+1. 初期画面: Nextを押します．
+
+    ![raspi_setup_step1](img/raspi_setup_step1.png)
+
+1. **Set Country**: Countryから"Japan"を選択し，Nextを押します．
+
+    ![raspi_setup_step2](img/raspi_setup_step2.png)
+
+2. **Change Password**: テキストボックスは空のまま，Nextを押します．
+    (本来はパスワードを変更すべきですが，今回のクラスタは学内からしかアクセス
+    できないので省きます)
+
+    ![raspi_setup_step3](img/raspi_setup_step3.png)
+
+3. **Set Up Screen**: "This screen shows a black border around the desktop"に
+    チェックを入れ，Nextを押します．
+
+    ![raspi_setup_step4](img/raspi_setup_step4.png)
+
+4. **Select Wifi Network**: Skipを押します． (有線で接続します)
+
+    ![raspi_setup_step5](img/raspi_setup_step5.png)
+
+5. **Update Software**: Skipを押します．
+
+    ![raspi_setup_step6](img/raspi_setup_step6.png)
+
+6. **Setup Complete**: Laterを押します．
+
+    ![raspi_setup_step7](img/raspi_setup_step7.png)
 
 ### ネットワークの設定
+
+自動的にNAISTのネットワークに接続されていますが，自動的に割り当てられた
+アドレスを使用しているため，アドレスが変わってしまう問題があります．
 
 `/etc/dhcpcd.conf`を編集し，下記の行を追加します．
 
@@ -34,3 +86,5 @@ $ sudo hostnamectl set-hostname XXX
 - `sd-niku02.naist.jp`
 - `sd-niku03.naist.jp`
 - `sd-niku04.naist.jp`
+
+以上でOSのインストール作業は完了です．一度Raspberry Piを再起動してください．
