--- a/src/ch_1_2.md
+++ b/src/ch_1_2.md
@@ -1,11 +1,26 @@
 ## SSHの設定
 
+Secure SHell (SSH) の設定を行います．
+
+### SSHサーバの起動
+
 ```text
-$ sudo systemctl enable ssh
 $ sudo systemctl start ssh
 ```
 
+さらに，Raspberry Piが起動した際にSSHサーバが自動的に起動する
+
+```text
+$ sudo systemctl enable ssh
+```
+
+### マスタ
+
 ```text
 $ ssh-kegen
-$ scp /home/pi/.ssh/id_rsa 163.221.190.225:~/.ssh/id_rsa
+```
+
+```text
+$ ssh-copy-id 163.221.190.225
+$ scp ~/.ssh/id_rsa 163.221.190.225:~/.ssh/id_rsa
 ```
