--- a/src/ch_1_4.md
+++ b/src/ch_1_4.md
@@ -8,21 +8,14 @@ MPIの実装の1つである，Open MPIをインストールします．
 $ sudo apt install openmpi-bin
 ```
 
-```text
-$ cd /opt/nfs
-$ leafpad hello.c
-$ leafpad hosts
-
-```
-
 次に，hostファイルを作成します．Hostファイルは，クラスタを構成するコンピュータ
 のアドレスをMPIに教えてあげるためのものです．
 
 ```text
-sd-niku01
-sd-niku02
-sd-niku03
-sd-niku04
+sd-niku01.naist.jp
+sd-niku02.naist.jp
+sd-niku03.naist.jp
+sd-niku04.naist.jp
 ```
 
 ### 動作確認
@@ -62,17 +55,26 @@ int main(int argc, char** argv) {
 ```
 
 ```text
+$ cd /opt/nfs
 $ mpicc -o hello hello.c
 ```
 
 ```text
-pi@niku01:/opt/nfs $ mpirun --hostfile hosts ./hello
-Hello world from processor niku01, rank 2 out of 8 processors
-Hello world from processor niku01, rank 3 out of 8 processors
-Hello world from processor niku01, rank 1 out of 8 processors
-Hello world from processor niku01, rank 0 out of 8 processors
-Hello world from processor niku02, rank 7 out of 8 processors
-Hello world from processor niku02, rank 4 out of 8 processors
-Hello world from processor niku02, rank 6 out of 8 processors
-Hello world from processor niku02, rank 5 out of 8 processors
+$ mpirun --hostfile hosts ./hello
+Hello world from processor niku01, rank 2 out of 16 processors
+Hello world from processor niku01, rank 0 out of 16 processors
+Hello world from processor niku01, rank 3 out of 16 processors
+Hello world from processor niku04, rank 14 out of 16 processors
+Hello world from processor niku04, rank 12 out of 16 processors
+Hello world from processor niku03, rank 8 out of 16 processors
+Hello world from processor niku04, rank 15 out of 16 processors
+Hello world from processor niku03, rank 9 out of 16 processors
+Hello world from processor niku02, rank 7 out of 16 processors
+Hello world from processor niku03, rank 10 out of 16 processors
+Hello world from processor niku02, rank 5 out of 16 processors
+Hello world from processor niku04, rank 13 out of 16 processors
+Hello world from processor niku03, rank 11 out of 16 processors
+Hello world from processor niku02, rank 6 out of 16 processors
+Hello world from processor niku01, rank 1 out of 16 processors
+Hello world from processor niku02, rank 4 out of 16 processors
 ```
