ファイル名を整理

--- a/src/ch_2_1.md
+++ b/src/ch_2_1.md
@@ -1,60 +1,90 @@
-# ノード内並列
+## OSのインストール
 
-まずは，内積計算プログラムが1つのRaspberry Pi上の複数のCPUコアを利用できるよう
-に拡張しましょう．これを，**ノード内並列化**と呼びます．
+Raspberry Pi向けに最適化された，RaspbianというOSをSDカードに書き込ます．
 
-複数のCPUコアを活用するには様々な方法がありますが，スパコンにおいて広く
-用いられているのは，[OpenMP](http://openmp.org/)と呼ばれるAPIです．
-OpenMPに対応するコンパイラを用いると，ソースコード中にディレクティブと
-呼ばれるコメントを挿入するだけで， コンパイラが自動的に並列化しててくれます．
+### SDカードの準備
 
-```c
-#include <stdio.h>
+1. Raspberry Piの[公式サイト](https://www.raspberrypi.org/downloads/raspbian/)
+からRaspbian Buster with desktop (Image with desktop based on Debian Buster)
+をダウンロードします．ダウンロードしたzipファイルを展開しておきます．
 
-#define TRIALS (1000)
-#define ARRAY_SIZE (1000 * 1000)
+2. OSをSDカードに書き込むためのソフトウェアEtcherをインストールします．
+Etcherの[公式サイト](https://www.balena.io/etcher/)からインストーラ
+をダウンロードし，インストールしてください．
 
-double a[ARRAY_SIZE];
-double b[ARRAY_SIZE];
+3. SDカードをPCに接続し，Etcherを起動してください．
+    "Select image"でRaspbianのディスクイメージを選択し，
+    "Select target"でSDカードを選択し，"Flash!"を押して書き込みを実行します．
 
-void compute()
-{
-    double sum = 0;
+![balenaEtcher](img/balena_etcher.png)
 
-    #pragma omp parallel for reduction(+:sum)
-    for (int i = 0; i < ARRAY_SIZE; i++) {
-        sum += a[i] * b[i];
-    }
-}
+### Raspbianのインストール
 
-int main(int argc, char *argv[])
-{
-    for (int i = 0; i < ARRAY_SIZE; i++) {
-        a[i] = 1.0;
-        b[i] = 2.0;
-    }
+Raspberry PiにSDカードを挿入し，ディスプレイ・キーボード・マウスを接続したら，
+電源を接続してください．Raspberry Piの起動画面が表示された後，Raspbianの
+インストーラが表示されます．
 
-    for (int i = 0; i < TRIALS; i++) {
-        compute();
-    }
+1. 初期画面: Nextを押します．
 
-    return 0;
-}
-```
+    ![raspi_setup_step1](img/raspi_setup_step1.png)
 
-逐次版の内積計算プログラムに追加したのは，
-`#pragma omp parallel for reduction(+:sum)`という1行だけです．
+1. **Set Country**: Countryから"Japan"を選択し，Nextを押します．
+
+    ![raspi_setup_step2](img/raspi_setup_step2.png)
+
+2. **Change Password**: テキストボックスは空のまま，Nextを押します．
+    (本来はパスワードを変更すべきですが，今回のクラスタは学内からしかアクセス
+    できないので省きます)
+
+    ![raspi_setup_step3](img/raspi_setup_step3.png)
+
+3. **Set Up Screen**: "This screen shows a black border around the desktop"に
+    チェックを入れ，Nextを押します．
+
+    ![raspi_setup_step4](img/raspi_setup_step4.png)
+
+4. **Select Wifi Network**: Skipを押します． (有線で接続します)
+
+    ![raspi_setup_step5](img/raspi_setup_step5.png)
+
+5. **Update Software**: Skipを押します．
+
+    ![raspi_setup_step6](img/raspi_setup_step6.png)
+
+6. **Setup Complete**: Laterを押します．
+
+    ![raspi_setup_step7](img/raspi_setup_step7.png)
+
+### ネットワークの設定
+
+自動的にNAISTのネットワークに接続されていますが，自動的に割り当てられた
+アドレスを使用しているため，アドレスが変わってしまう問題があります．
+
+`/etc/dhcpcd.conf`を編集し，下記の行を追加します．
 
 ```text
-$ gcc -fopenmp -o dot_omp dot_omp.c
+interface eth0
+static ip_address=XXX.XXX.XXX.XXX/XX
+static routers=163.221.190.1
+static domain_name_servers=163.221.8.11 163.221.8.12
 ```
 
-```text
-time ./dot_omp
+`XXX.XXX.XXX.XXX/XX`の部分はRasPiごとに下記のように変えてください．
+
+- `163.221.190.121/24`
+- `163.221.190.121/24`
+- `163.221.190.121/24`
+- `163.221.190.121/24`
+
+ホスト名を設定します．`XXX`の部分はRasPiごとに下記のように変えてください．
+
+```
+$ sudo hostnamectl set-hostname XXX
 ```
 
-```text
-real	0m7.372s
-user	0m29.175s
-sys	0m0.040s
-```
+- `sd-niku01.naist.jp`
+- `sd-niku02.naist.jp`
+- `sd-niku03.naist.jp`
+- `sd-niku04.naist.jp`
+
+以上でOSのインストール作業は完了です．一度Raspberry Piを再起動してください．
