--- a/src/ch_3_1.md
+++ b/src/ch_3_1.md
@@ -1,64 +1,60 @@
-## 円周率計算
+# ノード内並列
+
+まずは，内積計算プログラムが1つのRaspberry Pi上の複数のCPUコアを利用できるよう
+に拡張しましょう．これを，**ノード内並列化**と呼びます．
+
+複数のCPUコアを活用するには様々な方法がありますが，スパコンにおいて広く
+用いられているのは，[OpenMP](http://openmp.org/)と呼ばれるAPIです．
+OpenMPに対応するコンパイラを用いると，ソースコード中にディレクティブと
+呼ばれるコメントを挿入するだけで， コンパイラが自動的に並列化しててくれます．
 
 ```c
-#include <math.h>
 #include <stdio.h>
-#include <stdlib.h>
-#include <time.h>
 
-#define N (100 * 1000 * 1000)
+#define TRIALS (1000)
+#define ARRAY_SIZE (1000 * 1000)
 
-static struct timespec diff(struct timespec start, struct timespec end)
+double a[ARRAY_SIZE];
+double b[ARRAY_SIZE];
+
+void compute()
 {
-    struct timespec ts;
+    double sum = 0;
 
-    if (end.tv_nsec - start.tv_nsec < 0) {
-        ts.tv_sec = end.tv_sec - start.tv_sec - 1;
-        ts.tv_nsec = 1000000000 + end.tv_nsec - start.tv_nsec;
-    } else {
-        ts.tv_sec = end.tv_sec - start.tv_sec;
-        ts.tv_nsec = end.tv_nsec - start.tv_nsec;
+    #pragma omp parallel for reduction(+:sum)
+    for (int i = 0; i < ARRAY_SIZE; i++) {
+        sum += a[i] * b[i];
     }
-    return ts;
-}
-
-static void compute()
-{
-    long long count = 0;
-
-    double x, y;
-    struct drand48_data buffer;
-
-    srand48_r(0x12345678, &buffer);
-
-    for (int i = 0; i < N; i++) {
-        drand48_r(&buffer, &x);
-        drand48_r(&buffer, &y);
-
-        if (x * x + y * y < 1.0) {
-            count++;
-        }
-    }
-
-    double pi = 4.0 * count / N;
-    printf("estimated pi = %lf\n", pi);
-    printf("error = %lf\n", fabs(pi - M_PI));
 }
 
 int main(int argc, char *argv[])
 {
-    struct timespec start_ts, end_ts;
-    clock_gettime(CLOCK_MONOTONIC, &start_ts);
+    for (int i = 0; i < ARRAY_SIZE; i++) {
+        a[i] = 1.0;
+        b[i] = 2.0;
+    }
 
-    compute();
-
-    clock_gettime(CLOCK_MONOTONIC, &end_ts);
-
-    struct timespec elapsed_ts = diff(start_ts, end_ts);
-
-    printf("elapsed:    %ld.%09ld [s]\n", elapsed_ts.tv_sec,
-           elapsed_ts.tv_nsec);
+    for (int i = 0; i < TRIALS; i++) {
+        compute();
+    }
 
     return 0;
 }
+```
+
+逐次版の内積計算プログラムに追加したのは，
+`#pragma omp parallel for reduction(+:sum)`という1行だけです．
+
+```text
+$ gcc -fopenmp -o dot_omp dot_omp.c
+```
+
+```text
+time ./dot_omp
+```
+
+```text
+real	0m7.372s
+user	0m29.175s
+sys	0m0.040s
 ```
