--- a/src/ch_2_2.md
+++ b/src/ch_2_2.md
@@ -1,64 +1,26 @@
-# ノード間並列
+## SSHの設定
+
+Secure SHell (SSH) の設定を行います．
+
+### SSHサーバの起動
 
 ```text
-$ mpicc -o dot_mpi dot_mpi.c
+$ sudo systemctl start ssh
 ```
 
-```c
-#include <stdio.h>
-#include <mpi.h>
+さらに，Raspberry Piが起動した際にSSHサーバが自動的に起動する
 
-#define TRIALS (1000)
-#define ARRAY_SIZE (1000 * 1000)
+```text
+$ sudo systemctl enable ssh
+```
 
-double a[ARRAY_SIZE];
-double b[ARRAY_SIZE];
+### マスタ
 
-void compute()
-{
-    int rank, nprocs;
-
-    MPI_Comm_rank(MPI_COMM_WORLD, &rank);
-    MPI_Comm_size(MPI_COMM_WORLD, &nprocs);
-
-    double sum = 0;
-
-    int subarray_size = ARRAY_SIZE / nprocs;
-
-    for (int i = subarray_size * rank; i < subarray_size * (rank + 1); i++) {
-        sum += a[i] * b[i];
-    }
-
-    double sum_total;
-
-    MPI_Reduce(&sum, &sum_total, 1, MPI_DOUBLE, MPI_SUM, 0, MPI_COMM_WORLD);
-}
-
-int main(int argc, char *argv[])
-{
-    MPI_Init(&argc, &argv);
-
-    for (int i = 0; i < ARRAY_SIZE; i++) {
-        a[i] = 1.0;
-        b[i] = 2.0;
-    }
-
-    for (int i = 0; i < TRIALS; i++) {
-        compute();
-    }
-
-    MPI_Finalize();
-
-    return 0;
-}
+```text
+$ ssh-kegen
 ```
 
 ```text
-$ time mpirun --hostfile hosts dot_mpi
-```
-
-```text
-real	0m3.377s
-user	0m8.979s
-sys	0m0.851s
+$ ssh-copy-id 163.221.190.225
+$ scp ~/.ssh/id_rsa 163.221.190.225:~/.ssh/id_rsa
 ```
