中身を色々追加

--- a/src/ch_2_1.md
+++ b/src/ch_2_1.md
@@ -1,6 +1,6 @@
 ## OSのインストール
 
-Raspberry Pi向けに最適化された，RaspbianというOSをSDカードに書き込ます．
+この節では，Raspberry Pi向けに最適化された，RaspbianというOSをインストールします．
 
 ### SDカードの準備
 
@@ -57,8 +57,10 @@ Raspberry PiにSDカードを挿入し，ディスプレイ・キーボード・
 
 ### ネットワークの設定
 
-自動的にNAISTのネットワークに接続されていますが，自動的に割り当てられた
-アドレスを使用しているため，アドレスが変わってしまう問題があります．
+ここまでの作業でRaspberry Piは自動的にNAISTのネットワークに接続されています．
+しかし，NAISTのネットワークから自動的に割り当てられたIPアドレスを使用しているため，
+再起動時にIPアドレスが変わる可能性があります．これは後々の設定に不都合なため，
+各ノードのIPアドレスを固定します．
 
 `/etc/dhcpcd.conf`を編集し，下記の行を追加します．
 
@@ -69,22 +71,48 @@ static routers=163.221.190.1
 static domain_name_servers=163.221.8.11 163.221.8.12
 ```
 
-`XXX.XXX.XXX.XXX/XX`の部分はRasPiごとに下記のように変えてください．
+`XXX.XXX.XXX.XXX/XX`の部分はRaspberry Piごとに下記のように変えてください．
 
-- `163.221.190.121/24`
-- `163.221.190.121/24`
-- `163.221.190.121/24`
-- `163.221.190.121/24`
+- 1台目: `163.221.190.121/24`
+- 2台目: `163.221.190.121/24`
+- 3台目: `163.221.190.121/24`
+- 4台目: `163.221.190.121/24`
 
-ホスト名を設定します．`XXX`の部分はRasPiごとに下記のように変えてください．
+ホスト名を設定します．`XXX`の部分はRaspberry Piごとに下記のように変えてください．
 
 ```
 $ sudo hostnamectl set-hostname XXX
 ```
 
-- `sd-niku01.naist.jp`
-- `sd-niku02.naist.jp`
-- `sd-niku03.naist.jp`
-- `sd-niku04.naist.jp`
+- 1台目: `sd-nyg01.naist.jp`
+- 2台目: `sd-nyg02.naist.jp`
+- 3台目: `sd-nyg03.naist.jp`
+- 4台目: `sd-nyg04.naist.jp`
 
 以上でOSのインストール作業は完了です．一度Raspberry Piを再起動してください．
+
+```
+$ sudo reboot
+```
+
+最後に，IPアドレスとホスト名を正しく設定できていことを確認しましょう．
+
+IPアドレスの確認には，`ip`コマンドを使用します．`inet`の横に表示されている値が
+IPアドレスです．
+
+```
+$ ip address show eth0
+2: eth0: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
+    link/ether b8:27:eb:ab:5b:6f brd ff:ff:ff:ff:ff:ff
+    inet 163.221.190.121/24 brd 163.221.190.255 scope global noprefixroute eth0
+       valid_lft forever preferred_lft forever
+    inet6 fe80::91a8:486b:2b7a:4ff8/64 scope link
+       valid_lft forever preferred_lft forever
+```
+
+ホスト名の確認には，`hostname`コマンドを使用します．
+
+```
+$ hostname
+sd-nyg01.naist.jp
+```
