--- a/src/ch_2_2.md
+++ b/src/ch_2_2.md
@@ -1,26 +1,40 @@
 ## SSHの設定
 
-Secure SHell (SSH) の設定を行います．
+この節では，Secure SHell (SSH) を設定します．
+SSHは遠隔地のコンピュータをネットワークを介して操作するためのソフトウェアです．
+今回構築するクラスタでは，マスタから各スレーブ上にプログラムを起動するために使用します．
 
 ### SSHサーバの起動
+
+SSHによる外部からの操作を受け入れるためには，SSHサーバが起動している必要があります．
+
+まず，各ノードでSSHサーバを起動します．
 
 ```text
 $ sudo systemctl start ssh
 ```
 
-さらに，Raspberry Piが起動した際にSSHサーバが自動的に起動する
+さらに，Raspberry Piが起動した際にSSHサーバが自動起動するよう設定します．
 
 ```text
 $ sudo systemctl enable ssh
 ```
 
-### マスタ
+### 鍵の生成と転送
+
+SSHは，安全のため，"鍵"を有するコンピュータからのみ操作を受け入れます．そこで，マスタ上で鍵を生成し，これをスレーブに登録することによって，マスタから全てのスレーブを操作できるよう設定します．
+
+まず，マスタ上でSSH鍵を生成します．
 
 ```text
 $ ssh-kegen
 ```
 
+次に，生成した鍵を各スレーブに転送します．
+
 ```text
-$ ssh-copy-id 163.221.190.225
-$ scp ~/.ssh/id_rsa 163.221.190.225:~/.ssh/id_rsa
+$ ssh-copy-id <スレーブのIP>
+$ scp ~/.ssh/id_rsa <スレーブのIP>:~/.ssh/id_rsa
 ```
+
+以上でSSHに関する設定は完了です．
