--- a/src/ch_2_3.md
+++ b/src/ch_2_3.md
@@ -1,10 +1,16 @@
 ## NFSの設定
 
-Network File System (NFS)
+この節では，Network File System (NFS) を設定します．
+NFSは，異なるコンピュータ間でネットワークを介してファイルを共有するためのソフトウェアです．
+今回構築するクラスタでは，実行するプログラムをマスタとスレーブの間で共有するために使用します．
+
+NFSはサーバとクライアントの2種のソフトウェアから構成されます．
+NFSサーバは，コンピュータ上のファイルを公開するためのソフトウェアです．
+NFSクライアントはNFSサーバと通信し，NFSサーバが実行されているコンピュータ上のファイルを読み書きします．ここでは，マスタ上でNFSサーバを，スレーブ上でNFSクライアントで実行します．
 
 ### マスタ
 
-まず，NFS経由でスレーブへ公開するディレクトリを作成します．
+まず，NFS経由でスレーブに対して公開するディレクトリを作成します．
 ここでは，`/opt/nfs`を公開します．
 
 ```text
@@ -49,7 +55,7 @@ $ sudo systemctl reload nfs-server
 最後に，ファイルを正しく共有できているか確認するために，エディタで`/opt/nfs`
 以下にテスト用のファイルを作成しておきましょう．中身は何でも構いません．
 
-### ワーカ
+### スレーブ
 
 NFSクライアントをインストールします．
 
@@ -86,9 +92,9 @@ $ sudo mount -a
 ```
 
 以上で，スレーブにおけるNFSの設定は完了です．
-マスタで`/opt/nfs`に作成したファイルの中身が見えるか確認しましょう．
+マスタで`/opt/nfs`に作成したファイルが，スレーブから見えるか確認しましょう．
 
-> **Note**: NFSでは，ワーカの数が増えるとマスタの負荷が増大し，ファイルの
+> **Note**: NFSでは，スレーブの数が増えるとマスタの負荷が増大し，ファイルの
 > 読み書きが遅くなってしまうという問題があります．そのため，
 > 大規模なスパコンでは，負荷を複数のコンピュータに分散する
 > **並列ファイルシステム**が使用されています． (LustreやGPFSなど)
