--- a/src/ch_2_4.md
+++ b/src/ch_2_4.md
@@ -1,27 +1,38 @@
 ## MPIの設定
 
+この節では，Message Passing Interface (MPI) をインストールします．
+MPIは並列分散計算のためのソフトウェアで，複数のコンピュータ上で並列に実行される
+プログラムが協調動作することを可能にします．
+
+MPIには様々な実装が存在しますが，今回はオープンソースであり，広く使用されている Open MPIを採用します．
+[SSH](./ch_2_2.html)と[NFS](./ch_2_3.html)が動作の前提となるので，
+これらが正しく設定できていることを確認しておいてください．
+
 ### 設定
 
-MPIの実装の1つである，Open MPIをインストールします．
+まず，Open MPIを各ノードでインストールします．
 
 ```text
 $ sudo apt install openmpi-bin
 ```
 
 次に，hostファイルを作成します．Hostファイルは，クラスタを構成するコンピュータ
-のアドレスをMPIに教えてあげるためのものです．
+のアドレスをMPIに教えてあげるためのものです．次の内容のテキストファイルを，
+`/opt/nfs/hosts`という名前で作成してください．
 
 ```text
-sd-niku01.naist.jp
-sd-niku02.naist.jp
-sd-niku03.naist.jp
-sd-niku04.naist.jp
+sd-nyg01.naist.jp
+sd-nyg02.naist.jp
+sd-nyg03.naist.jp
+sd-nyg04.naist.jp
 ```
 
 ### 動作確認
 
-下記の
-`/opt/nfs/hello.c`
+簡単なMPIプログラムを実行し，MPIが正しく動作することを確認します．
+以下の操作は全てマスタ上で行います．
+
+下記のソースコードを`/opt/nfs/hello.c`というファイル名で作成してください．
 ([MPI Tutorial](https://mpitutorial.com/tutorials/mpi-hello-world/)より抜粋)
 
 ```c
@@ -54,27 +65,32 @@ int main(int argc, char** argv) {
 }
 ```
 
+次に，`hello.c`をMPI用コンパイラでコンパイルし，実行可能ファイルを作成します．
+
 ```text
 $ cd /opt/nfs
 $ mpicc -o hello hello.c
 ```
 
+MPIプログラム用ランチャでプログラムを起動します．
+下記のようなメッセージが出力されれば成功です．(表示は順不同です)
+
 ```text
 $ mpirun --hostfile hosts ./hello
-Hello world from processor niku01, rank 2 out of 16 processors
-Hello world from processor niku01, rank 0 out of 16 processors
-Hello world from processor niku01, rank 3 out of 16 processors
-Hello world from processor niku04, rank 14 out of 16 processors
-Hello world from processor niku04, rank 12 out of 16 processors
-Hello world from processor niku03, rank 8 out of 16 processors
-Hello world from processor niku04, rank 15 out of 16 processors
-Hello world from processor niku03, rank 9 out of 16 processors
-Hello world from processor niku02, rank 7 out of 16 processors
-Hello world from processor niku03, rank 10 out of 16 processors
-Hello world from processor niku02, rank 5 out of 16 processors
-Hello world from processor niku04, rank 13 out of 16 processors
-Hello world from processor niku03, rank 11 out of 16 processors
-Hello world from processor niku02, rank 6 out of 16 processors
-Hello world from processor niku01, rank 1 out of 16 processors
-Hello world from processor niku02, rank 4 out of 16 processors
+Hello world from processor sd-nyg01, rank 2 out of 16 processors
+Hello world from processor sd-nyg01, rank 0 out of 16 processors
+Hello world from processor sd-nyg01, rank 3 out of 16 processors
+Hello world from processor sd-nyg04, rank 14 out of 16 processors
+Hello world from processor sd-nyg04, rank 12 out of 16 processors
+Hello world from processor sd-nyg03, rank 8 out of 16 processors
+Hello world from processor sd-nyg04, rank 15 out of 16 processors
+Hello world from processor sd-nyg03, rank 9 out of 16 processors
+Hello world from processor sd-nyg02, rank 7 out of 16 processors
+Hello world from processor sd-nyg03, rank 10 out of 16 processors
+Hello world from processor sd-nyg02, rank 5 out of 16 processors
+Hello world from processor sd-nyg04, rank 13 out of 16 processors
+Hello world from processor sd-nyg03, rank 11 out of 16 processors
+Hello world from processor sd-nyg02, rank 6 out of 16 processors
+Hello world from processor sd-nyg01, rank 1 out of 16 processors
+Hello world from processor sd-nyg02, rank 4 out of 16 processors
 ```
