--- a/src/ch_3_1.md
+++ b/src/ch_3_1.md
@@ -1,4 +1,4 @@
-# ノード内並列
+## ノード内並列
 
 まずは，内積計算プログラムが1つのRaspberry Pi上の複数のCPUコアを利用できるよう
 に拡張しましょう．これを，**ノード内並列化**と呼びます．
@@ -7,6 +7,9 @@
 用いられているのは，[OpenMP](http://openmp.org/)と呼ばれるAPIです．
 OpenMPに対応するコンパイラを用いると，ソースコード中にディレクティブと
 呼ばれるコメントを挿入するだけで， コンパイラが自動的に並列化しててくれます．
+
+逐次版の内積計算プログラムに追加したのは，
+`#pragma omp parallel for reduction(+:sum)`という1行だけです．
 
 ```c
 #include <stdio.h>
@@ -42,16 +45,23 @@ int main(int argc, char *argv[])
 }
 ```
 
-逐次版の内積計算プログラムに追加したのは，
-`#pragma omp parallel for reduction(+:sum)`という1行だけです．
+このプログラムをgccコンパイラでコンパイルします．
+OpenMPを使用するプログラムするためには，`-fopenmp`というオプションを指定する必要があります．
 
 ```text
 $ gcc -fopenmp -o dot_omp dot_omp.c
 ```
 
+このプログラムを実行します．
+
+
 ```text
 time ./dot_omp
 ```
+
+OpenMPを使用しない場合の26.886秒に対して，7.372秒に実行時間を短縮できました．
+Raspberry Pi 3B+は4つのCPUコアを搭載しています．4つのCPUコアを活用することで，
+3.6倍の高速化を達成できたことになります．
 
 ```text
 real	0m7.372s
