--- a/src/ch_3_2.md
+++ b/src/ch_3_2.md
@@ -1,8 +1,10 @@
-# ノード間並列
+## ノード間並列
 
-```text
-$ mpicc -o dot_mpi dot_mpi.c
-```
+ここでは，内積計算プログラムが複数のRaspberry Pi上の複数のCPUコアを利用できるよう
+拡張しましょう．これを，**ノード間並列化**と呼びます．
+
+ノード内並列化と同様に，ノード間並列化にも様々な方法がありますが，
+スパコンにおいて広く用いられているのは，MPIと呼ばれるAPIです．
 
 ```c
 #include <stdio.h>
@@ -53,9 +55,20 @@ int main(int argc, char *argv[])
 }
 ```
 
+このプログラムをMPI用コンパイラでコンパイルします．
+
+```text
+$ mpicc -o dot_mpi dot_mpi.c
+```
+
+MPIプログラム用ランチャでプログラムを起動し，実行時間を計測します．
+
 ```text
 $ time mpirun --hostfile hosts dot_mpi
 ```
+
+OpenMPを使用しない場合の26.886秒に対して，3.377秒に実行時間を短縮できました．
+4ノード上の計16のCPUコアを活用することで， 8.0倍の高速化を達成できたことになります．
 
 ```text
 real	0m3.377s
