--- a/src/ch_4_1.md
+++ b/src/ch_4_1.md
@@ -1,5 +1,7 @@
 ## 円周率計算
 
+下記のソースコードは，モンテカルロ法によって円周率の近似値を求めるためのプログラムです．
+
 ```c
 #include <math.h>
 #include <stdio.h>
@@ -62,3 +64,18 @@ int main(int argc, char *argv[])
     return 0;
 }
 ```
+
+具体的なアルゴリズムは次の通りです．
+1x1の正方形内にランダムに点を打ち，半径1の円の中に含まれる点の個数を数えます．
+円に含まれるの点の数を全ての点の数で割ると，4分の1円の面積の近似値が求まります．
+これを4倍すると，円周率の近似値が得られます．上の例では，
+10億個の点を打っています．
+
+![モンテカルロ法による円周率の近似計算](img/pi.gif)
+nicoguaro [CC BY 3.0](https://creativecommons.org/licenses/by/3.0)
+
+
+### 課題
+
+- このプログラムをノード内並列化してみましょう．
+- このプログラムをノード間並列化してみましょう．
