IPアドレスの設定等を修正

--- a/src/ch_2_1.md
+++ b/src/ch_2_1.md
@@ -4,27 +4,38 @@
 
 ### SDカードの準備
 
-1. Raspberry Piの[公式サイト](https://www.raspberrypi.org/downloads/raspbian/)
+1. **ディスクイメージの準備**:
+Raspberry Piの[公式サイト](https://www.raspberrypi.org/downloads/raspbian/)
 からRaspbian Buster with desktop (Image with desktop based on Debian Buster)
-をダウンロードします．ダウンロードしたzipファイルを展開しておきます．
+をダウンロードします．ダウンロードしたzipファイルを展開し，
+SDカードに書き込むためのディスクイメージを取り出しておきます．
 
-2. OSをSDカードに書き込むためのソフトウェアEtcherをインストールします．
+2. **ライティングソフトの準備**:
+OSをSDカードに書き込むためのソフトウェアEtcherをインストールします．
 Etcherの[公式サイト](https://www.balena.io/etcher/)からインストーラ
 をダウンロードし，インストールしてください．
 
-3. SDカードをPCに接続し，Etcherを起動してください．
+3. **ディスクイメージの書き込み**:
+SDカードをPCに接続し，Etcherを起動してください．
     "Select image"でRaspbianのディスクイメージを選択し，
     "Select target"でSDカードを選択し，"Flash!"を押して書き込みを実行します．
 
 ![balenaEtcher](img/balena_etcher.png)
 
+### ハードウェアの準備
+
+Raspberry Piの裏面のスロットにディスクイメージを書き込んだSDカードを挿入してください．
+ディスプレイ・キーボード・マウスを接続した後，電源を接続してください．
+電源のコネクタは汎用のMicro USBですが，消費電流が大きいため，必ず専用のアダプタを使用してください．
+Raspberry Piには電源ボタンが存在せず，電源を接続すると即座に起動が始まります．
+
+![RasPi](img/raspi.jpg)
+
 ### Raspbianのインストール
 
-Raspberry PiにSDカードを挿入し，ディスプレイ・キーボード・マウスを接続したら，
-電源を接続してください．Raspberry Piの起動画面が表示された後，Raspbianの
-インストーラが表示されます．
+電源を投入すると，Raspberry Piの起動画面が表示された後，Raspbianのインストーラが表示されます．
 
-1. 初期画面: Nextを押します．
+1. **初期画面**: Nextを押します．
 
     ![raspi_setup_step1](img/raspi_setup_step1.png)
 
@@ -73,10 +84,10 @@ static domain_name_servers=163.221.8.11 163.221.8.12
 
 `XXX.XXX.XXX.XXX/XX`の部分はRaspberry Piごとに下記のように変えてください．
 
-- 1台目: `163.221.190.121/24`
-- 2台目: `163.221.190.121/24`
-- 3台目: `163.221.190.121/24`
-- 4台目: `163.221.190.121/24`
+- 1台目: `163.221.190.129/24`
+- 2台目: `163.221.190.130/24`
+- 3台目: `163.221.190.131/24`
+- 4台目: `163.221.190.132/24`
 
 ホスト名を設定します．`XXX`の部分はRaspberry Piごとに下記のように変えてください．
 
