--- a/src/ch_2_3.md
+++ b/src/ch_2_3.md
@@ -73,7 +73,7 @@ $ sudo mkdir /opt/nfs
 `/etc/fstab`を編集し，下記の行をファイルの末尾に追加します．
 
 ```text
-163.221.190.224:/opt/nfs        /opt/nfs        nfs     defaults        0       0
+sd-nyg01.naist.jp:/opt/nfs        /opt/nfs        nfs     defaults        0       0
 ```
 
 ```text
