--- a/src/ch_2_1.md
+++ b/src/ch_2_1.md
@@ -25,7 +25,7 @@ SDカードをPCに接続し，Etcherを起動してください．
 ### ハードウェアの準備
 
 Raspberry Piの裏面のスロットにディスクイメージを書き込んだSDカードを挿入してください．
-ディスプレイ・キーボード・マウスを接続した後，電源を接続してください．
+ディスプレイ，キーボード，マウス，ネットワークケーブルを接続した後，電源を接続してください．
 電源のコネクタは汎用のMicro USBですが，消費電流が大きいため，必ず専用のアダプタを使用してください．
 Raspberry Piには電源ボタンが存在せず，電源を接続すると即座に起動が始まります．
 
