--- a/src/ch_2_2.md
+++ b/src/ch_2_2.md
@@ -20,6 +20,16 @@ $ sudo systemctl start ssh
 $ sudo systemctl enable ssh
 ```
 
+### SSHクライアントの設定
+
+SSHクライアントの設定ファイルを作成します．
+各ノードで下記の内容のテキストファイルを`/home/pi/.ssh/config`に作成してください．
+
+```
+Host *
+    StrictHostKeyChecking no
+```
+
 ### 鍵の生成と転送
 
 SSHは，安全のため，"鍵"を有するコンピュータからのみ操作を受け入れます．そこで，マスタ上で鍵を生成し，これをスレーブに登録することによって，マスタから全てのスレーブを操作できるよう設定します．
@@ -34,7 +44,7 @@ $ ssh-kegen
 
 ```text
 $ ssh-copy-id <スレーブのIP>
-$ scp ~/.ssh/id_rsa <スレーブのIP>:~/.ssh/id_rsa
+$ scp /home/pi/.ssh/id_rsa <スレーブのIP>:/home/pi/.ssh/id_rsa
 ```
 
 以上でSSHに関する設定は完了です．
