2章修正: マスタにも公開鍵をauthorized_keysに登録

--- a/src/ch_2_2.md
+++ b/src/ch_2_2.md
@@ -40,6 +40,12 @@ SSHは，安全のため，"鍵"を有するコンピュータからのみ操作
 $ ssh-keygen
 ```
 
+マスタ自身にもこの鍵でログインできるように登録します．
+
+```text
+$ ssh-copy-id localhost
+```
+
 次に，生成した鍵を各スレーブに転送します．
 
 ```text
