乱数生成器の初期化法を変更

--- a/src/ch_4_1.md
+++ b/src/ch_4_1.md
@@ -30,8 +30,11 @@ static void compute()
 
     double x, y;
     struct drand48_data buffer;
+    struct timespec ts;
 
-    srand48_r(0x12345678, &buffer);
+    clock_gettime(CLOCK_MONOTONIC, &ts);
+
+    srand48_r(ts.tv_nsec, &buffer);
 
     for (int i = 0; i < N; i++) {
         drand48_r(&buffer, &x);
