サンプルコードにコメントを追加

--- a/src/ch_4_1.md
+++ b/src/ch_4_1.md
@@ -26,27 +26,35 @@ static struct timespec diff(struct timespec start, struct timespec end)
 
 static void compute()
 {
+    // 原点を中心とする半径1の円に含まれる点の個数
     long long count = 0;
 
     double x, y;
     struct drand48_data buffer;
     struct timespec ts;
 
+    // 疑似乱数生成器を現在時刻で初期化
     clock_gettime(CLOCK_MONOTONIC, &ts);
-
     srand48_r(ts.tv_nsec, &buffer);
 
+    // 計N個の点を生成する
     for (int i = 0; i < N; i++) {
+        // [0, 1)の範囲の乱数を生成し，xとyに代入
         drand48_r(&buffer, &x);
         drand48_r(&buffer, &y);
 
+        // (x, y)が原点を中心とする半径1の円に含まれるなら
         if (x * x + y * y < 1.0) {
+            // countを1増やす
             count++;
         }
     }
 
+    // 円周率の近似値を表示
     double pi = 4.0 * count / N;
     printf("estimated pi = %lf\n", pi);
+
+    // 近似値の真値からの誤差を表示
     printf("error = %lf\n", fabs(pi - M_PI));
 }
 
