--- a/src/ch_4_2.md
+++ b/src/ch_4_2.md
@@ -1,5 +1,7 @@
 ## 熱伝導シミュレーション
 
+下記のソースコードは，有限差分法によって熱伝導方程式をシミュレーションするためのプログラムです．
+
 ```c
 #include <stdio.h>
 #include <stdlib.h>
@@ -160,3 +162,9 @@ int main(int argc, char *argv[])
     return 0;
 }
 ```
+
+### 課題
+
+- このプログラムをコンパイルし，実行してみましょう．
+- [ParaView](../ch_4_3.html)を用いて，出力されたCSVファイルを可視化してみましょう．
+- 初期条件を変更し，シミュレーション結果がどのように変わるか調べてみましょう．
