タイポ修正 (ParaViewの説明)

--- a/src/ch_4_3.md
+++ b/src/ch_4_3.md
@@ -35,8 +35,8 @@ ParaViewを起動すると，次のような画面が表示されます．
 
 - "Properties" セクション
     - "X Column": "T" を "x" に変更
-    - "T Column": "T" を "y" に変更
-    - "X Column": "T" を "x" に変更
+    - "Y Column": "T" を "y" に変更
+    - "Z Column": "T" を "x" に変更
     - "2D Points" をチェック
 - "Coloring" セクション
     - "Solid Color" を "T" に変更
