ホスト名をsd-nyg0n -> sd-reiwa0nに変更

--- a/src/ch_2_1.md
+++ b/src/ch_2_1.md
@@ -84,10 +84,10 @@ static domain_name_servers=163.221.8.11 163.221.8.12
 
 `XXX.XXX.XXX.XXX/XX`の部分はRaspberry Piごとに下記のように変えてください．
 
-- 1台目: `163.221.190.129/24`
-- 2台目: `163.221.190.130/24`
-- 3台目: `163.221.190.131/24`
-- 4台目: `163.221.190.132/24`
+- 1台目: `163.221.190.121/24`
+- 2台目: `163.221.190.122/24`
+- 3台目: `163.221.190.123/24`
+- 4台目: `163.221.190.124/24`
 
 ホスト名を設定します．`XXX`の部分はRaspberry Piごとに下記のように変えてください．
 
@@ -95,10 +95,10 @@ static domain_name_servers=163.221.8.11 163.221.8.12
 $ sudo hostnamectl set-hostname XXX
 ```
 
-- 1台目: `sd-nyg01.naist.jp`
-- 2台目: `sd-nyg02.naist.jp`
-- 3台目: `sd-nyg03.naist.jp`
-- 4台目: `sd-nyg04.naist.jp`
+- 1台目: `sd-reiwa01.naist.jp`
+- 2台目: `sd-reiwa02.naist.jp`
+- 3台目: `sd-reiwa03.naist.jp`
+- 4台目: `sd-reiwa04.naist.jp`
 
 以上でOSのインストール作業は完了です．一度Raspberry Piを再起動してください．
 
@@ -125,5 +125,5 @@ $ ip address show eth0
 
 ```
 $ hostname
-sd-nyg01.naist.jp
+sd-reiwa01.naist.jp
 ```
