--- a/src/ch_2_3.md
+++ b/src/ch_2_3.md
@@ -75,7 +75,7 @@ $ sudo mkdir /opt/nfs
 `/etc/fstab`を編集し，下記の行をファイルの末尾に追加します．
 
 ```text
-sd-nyg01.naist.jp:/opt/nfs        /opt/nfs        nfs     defaults        0       0
+sd-reiwa01.naist.jp:/opt/nfs        /opt/nfs        nfs     defaults        0       0
 ```
 
 追記後のファイルの例:
@@ -86,7 +86,7 @@ PARTUUID=63d8a5be-01  /boot           vfat    defaults          0       2
 PARTUUID=63d8a5be-02  /               ext4    defaults,noatime  0       1
 # a swapfile is not a swap partition, no line here
 #   use  dphys-swapfile swap[on|off]  for that
-sd-nyg01.naist.jp:/opt/nfs        /opt/nfs        nfs     defaults        0       0
+sd-reiwa01.naist.jp:/opt/nfs        /opt/nfs        nfs     defaults        0       0
 ```
 
 `/etc/fstab`の設定を反映させます．
