--- a/src/ch_2_4.md
+++ b/src/ch_2_4.md
@@ -21,10 +21,10 @@ $ sudo apt install openmpi-bin
 `/opt/nfs/hosts`という名前で作成してください．
 
 ```text
-sd-nyg01.naist.jp
-sd-nyg02.naist.jp
-sd-nyg03.naist.jp
-sd-nyg04.naist.jp
+sd-reiwa01.naist.jp
+sd-reiwa02.naist.jp
+sd-reiwa03.naist.jp
+sd-reiwa04.naist.jp
 ```
 
 ### 動作確認
@@ -77,20 +77,20 @@ MPIプログラム用ランチャでプログラムを起動します．
 
 ```text
 $ mpirun --hostfile hosts ./hello
-Hello world from processor sd-nyg01, rank 2 out of 16 processors
-Hello world from processor sd-nyg01, rank 0 out of 16 processors
-Hello world from processor sd-nyg01, rank 3 out of 16 processors
-Hello world from processor sd-nyg04, rank 14 out of 16 processors
-Hello world from processor sd-nyg04, rank 12 out of 16 processors
-Hello world from processor sd-nyg03, rank 8 out of 16 processors
-Hello world from processor sd-nyg04, rank 15 out of 16 processors
-Hello world from processor sd-nyg03, rank 9 out of 16 processors
-Hello world from processor sd-nyg02, rank 7 out of 16 processors
-Hello world from processor sd-nyg03, rank 10 out of 16 processors
-Hello world from processor sd-nyg02, rank 5 out of 16 processors
-Hello world from processor sd-nyg04, rank 13 out of 16 processors
-Hello world from processor sd-nyg03, rank 11 out of 16 processors
-Hello world from processor sd-nyg02, rank 6 out of 16 processors
-Hello world from processor sd-nyg01, rank 1 out of 16 processors
-Hello world from processor sd-nyg02, rank 4 out of 16 processors
+Hello world from processor sd-reiwa01, rank 2 out of 16 processors
+Hello world from processor sd-reiwa01, rank 0 out of 16 processors
+Hello world from processor sd-reiwa01, rank 3 out of 16 processors
+Hello world from processor sd-reiwa04, rank 14 out of 16 processors
+Hello world from processor sd-reiwa04, rank 12 out of 16 processors
+Hello world from processor sd-reiwa03, rank 8 out of 16 processors
+Hello world from processor sd-reiwa04, rank 15 out of 16 processors
+Hello world from processor sd-reiwa03, rank 9 out of 16 processors
+Hello world from processor sd-reiwa02, rank 7 out of 16 processors
+Hello world from processor sd-reiwa03, rank 10 out of 16 processors
+Hello world from processor sd-reiwa02, rank 5 out of 16 processors
+Hello world from processor sd-reiwa04, rank 13 out of 16 processors
+Hello world from processor sd-reiwa03, rank 11 out of 16 processors
+Hello world from processor sd-reiwa02, rank 6 out of 16 processors
+Hello world from processor sd-reiwa01, rank 1 out of 16 processors
+Hello world from processor sd-reiwa02, rank 4 out of 16 processors
 ```
