OMP_NUM_THREADSと-npオプションの説明を追加

--- a/src/ch_3_1.md
+++ b/src/ch_3_1.md
@@ -56,7 +56,7 @@ $ gcc -fopenmp -o dot_omp dot_omp.c
 
 
 ```text
-time ./dot_omp
+$ time ./dot_omp
 ```
 
 OpenMPを使用しない場合の26.886秒に対して，7.372秒に実行時間を短縮できました．
@@ -68,3 +68,13 @@ real	0m7.372s
 user	0m29.175s
 sys	0m0.040s
 ```
+
+OpenMPはデフォルトでは全てのCPUコアを用いて計算を行いますが，
+`OMP_NUM_THREADS`という環境変数を設定することにより，使用するコア数を制限することができます．
+例えば，2コアを使用して計算を行うためには，次のようにします．
+
+```text
+$ OMP_NUM_THREADS=2 time ./dot_omp
+```
+
+使用するコア数を変更し，プログラムの実行時間がどのように変化するか調べてみましょう．
