--- a/src/ch_3_2.md
+++ b/src/ch_3_2.md
@@ -75,3 +75,14 @@ real	0m3.377s
 user	0m8.979s
 sys	0m0.851s
 ```
+
+MPIはデフォルトでは全てのノードの全てのCPUコアを用いて計算を行います．
+`mpirun`に`-np`というオプションを指定することにより，
+使用するコア数を制限することができます．
+例えば，8コアを使用して計算を行うためには，次のようにします．
+
+```text
+$ time mpirun -np 8 --hostfile hosts dot_mpi
+```
+
+使用するコア数を変更し，プログラムの実行時間がどのように変化するか調べてみましょう．
