アウトラインを調整

--- a/src/ch_2_2.md
+++ b/src/ch_2_2.md
@@ -1,10 +1,10 @@
-## SSHの設定
+# SSHの設定
 
 この節では，Secure SHell (SSH) を設定します．
 SSHは遠隔地のコンピュータをネットワークを介して操作するためのソフトウェアです．
 今回構築するクラスタでは，マスタから各スレーブ上にプログラムを起動するために使用します．
 
-### SSHサーバの起動
+## SSHサーバの起動
 
 SSHによる外部からの操作を受け入れるためには，SSHサーバが起動している必要があります．
 
@@ -20,7 +20,7 @@ $ sudo systemctl start ssh
 $ sudo systemctl enable ssh
 ```
 
-### SSHクライアントの設定
+## SSHクライアントの設定
 
 SSHクライアントの設定ファイルを作成します．
 各ノードで下記の内容のテキストファイルを`/home/pi/.ssh/config`に作成してください．
@@ -30,7 +30,7 @@ Host *
     StrictHostKeyChecking no
 ```
 
-### 鍵の生成と転送
+## 鍵の生成と転送
 
 SSHは，安全のため，"鍵"を有するコンピュータからのみ操作を受け入れます．そこで，マスタ上で鍵を生成し，これをスレーブに登録することによって，マスタから全てのスレーブを操作できるよう設定します．
 
