--- a/src/ch_3_1.md
+++ b/src/ch_3_1.md
@@ -1,7 +1,9 @@
-## ノード内並列
+# ノード内並列
 
 まずは，内積計算プログラムが1つのRaspberry Pi上の複数のCPUコアを利用できるよう
 に拡張しましょう．これを，**ノード内並列化**と呼びます．
+
+## OpenMPとは
 
 複数のCPUコアを活用するには様々な方法がありますが，スパコンにおいて広く
 用いられているのは，[OpenMP](http://openmp.org/)と呼ばれるAPIです．
@@ -44,6 +46,8 @@ int main(int argc, char *argv[])
     return 0;
 }
 ```
+
+## OpenMP版プログラムのコンパイル・実行
 
 このプログラムをgccコンパイラでコンパイルします．
 OpenMPを使用するプログラムするためには，`-fopenmp`というオプションを指定する必要があります．
