--- a/src/ch_4_1.md
+++ b/src/ch_4_1.md
@@ -1,4 +1,4 @@
-## 円周率計算
+# 円周率計算
 
 下記のソースコードは，モンテカルロ法によって円周率の近似値を求めるためのプログラムです．
 
@@ -86,7 +86,7 @@ int main(int argc, char *argv[])
 nicoguaro [CC BY 3.0](https://creativecommons.org/licenses/by/3.0)
 
 
-### 課題
+## やってみよう
 
 - このプログラムをノード内並列化してみましょう．
 - このプログラムをノード間並列化してみましょう．
