--- a/src/ch_4_2.md
+++ b/src/ch_4_2.md
@@ -1,4 +1,4 @@
-## 熱伝導シミュレーション
+# 熱伝導シミュレーション
 
 下記のソースコードは，有限差分法によって熱伝導方程式をシミュレーションするためのプログラムです．
 
@@ -163,7 +163,7 @@ int main(int argc, char *argv[])
 }
 ```
 
-### 課題
+## やってみよう
 
 - このプログラムをコンパイルし，実行してみましょう．
 - [ParaView](../ch_4_3.html)を用いて，出力されたCSVファイルを可視化してみましょう．
