--- a/src/ch_4_3.md
+++ b/src/ch_4_3.md
@@ -1,4 +1,4 @@
-## ParaViewの使い方
+# ParaViewの使い方
 
 ParaViewを[公式サイト](https://www.paraview.org/download/)からダウンロードし，インストールします．
 ParaViewを起動すると，次のような画面が表示されます．
