SDカードの準備を更新

--- a/src/ch_2_1.md
+++ b/src/ch_2_1.md
@@ -4,29 +4,22 @@
 
 ## SDカードの準備
 
-1. **ディスクイメージの準備**:
-Raspberry Piの[公式サイト](https://www.raspberrypi.org/downloads/raspberry-pi-os/)
-からRaspberry Pi OS (32-bit) with desktop
-をダウンロードします．ダウンロードしたzipファイルを展開し，
-SDカードに書き込むためのディスクイメージ(.imgファイル)を取り出しておきます．
+1. **ライティングソフトの準備**:
+Raspberry Piの[公式サイト](https://www.raspberrypi.com/software/)
+からRaspberry Pi Imagerをダウンロードし，インストールしてください．
 
-2. **ライティングソフトの準備**:
-OSをSDカードに書き込むためのソフトウェアEtcherをインストールします．
-Etcherの[公式サイト](https://www.balena.io/etcher/)からインストーラ
-をダウンロードし，インストールしてください．
+2. **ディスクイメージの書き込み**:
+SDカードをPCに接続し，Raspberry Pi Imagerを起動してください．
+    "CHOOSE OS（OSを選ぶ）"でRaspberry Pi OS (32-bit)を選択し，
+    "CHOOSE STORAGE（ストレージを選ぶ）"でSDカードを選択し，"WRITE（書き込む）"を押して書き込みを実行します．
 
-3. **ディスクイメージの書き込み**:
-SDカードをPCに接続し，Etcherを起動してください．
-    "Select image"でRaspberry Pi OSのディスクイメージを選択し，
-    "Select target"でSDカードを選択し，"Flash!"を押して書き込みを実行します．
-
-![balenaEtcher](img/balena_etcher.png)
+![raspi_imager](img/raspi_imager.png)
 
 ## ハードウェアの準備
 
 Raspberry Piの裏面のスロットにディスクイメージを書き込んだSDカードを挿入してください．
 ディスプレイ，キーボード，マウス，ネットワークケーブルを接続した後，電源を接続してください．
-電源のコネクタは汎用のMicro USBですが，消費電流が大きいため，必ず専用のアダプタを使用してください．
+電源のコネクタは汎用のMicro USBもしくはUSB Type-Cですが，消費電流が大きいため，必ず専用のアダプタを使用してください．
 Raspberry Piには電源ボタンが存在せず，電源を接続すると即座に起動が始まります．
 
 ![RasPi](img/raspi.jpg)
